# research-agent

./: .gitignore  DEEP_RESEARCH_GUIDE.md  README.md  main.py  pyproject.toml
app/: __init__.py  agent.py  api.py
static/: index.html
static/css/: style.css
static/js/: app.js
